# Drawing-Competition-Backend-V2

./: .gitignore  Dockerfile  LICENSE  README.md  command.py  docker-compose.yaml  pybabel_README.md  pyproject.toml  pytest_README.md  requirements.txt  typer_README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feat-issue.yml
src/: initializer.py  main.py
src/configs/: __init__.py  cfg.py  db.py  openapi.py
src/dependencies/: __init__.py  repositories.py  services.py  utils.py
src/exceptions/: __init__.py  exceptions.py
src/middlewares/: __init__.py  language.py  log.py
src/models/enums/: __init__.py
src/models/pydantic/: __init__.py  challenge.py  clip.py  round.py  statistic.py  submission.py  team.py
src/models/tortoise/: __init__.py  challenge.py  round.py  submission.py  team.py
src/repositories/: __init__.py  base.py  challenge.py  round.py  submission.py  team.py
src/routers/: __init__.py  challenge.py  clip.py  items.py  round.py  statistic.py  submission.py  team.py
src/serializers/: __init__.py  team.py
src/services/: __init__.py  challenge.py  listener.py  round.py  statistic.py  submission.py  team.py
src/utils/: __init__.py  clip.py  i18n.py  judge.py  jwt.py  logger.py
src/utils/api/: __init__.py  router.py
src/utils/judge_dir/: drawing_code_template.py  main_drawing.py
src/ws_router/: statistic.py
tests/: client.py  conftest.py  pytest.ini
tests/common/: __init__.py  logger.py
tests/e2e/: test_challenge.py  test_clip.py  test_round.py  test_statistic.py  test_submission.py  test_team.py
tests/test_api/: test_items.py
tests/test_fixture/: __init__.py  challenge.py  round.py  submission.py  team.py
tests/test_utils/: test_api_routers.py
tests/unit/models/pydantic/: test_challenge.py  test_clip.py  test_round.py  test_statistic.py  test_submission.py  test_team.py
tests/unit/models/tortoise/: challenge.py  round.py  submission.py  team.py
tests/unit/repositories/: test_challenge.py  test_round.py  test_submission.py  test_team.py
translations/: messages.pot
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/zh_TW/LC_MESSAGES/: messages.mo  messages.po
