[project]
name = "drawing-competition-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "fan9704",email = "cxz123499@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "tortoise-orm[psycopg] (>=0.24.0,<0.25.0)",
    "betterconf (>=4.5.0,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "requests (>=2.32.3,<3.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "ngrok (>=1.4.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
#poetry config virtualenvs.in-project true

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]

[tool.poetry.dependencies]
python = ">=3.10"
redis = "^5.2.1"
